[gd_scene load_steps=33 format=3 uid="uid://cxgea6j70bhkn"]

[ext_resource type="Script" uid="uid://cxf0hwtw5npld" path="res://Scences/characters/player.gd" id="1_kt7ow"]
[ext_resource type="Texture2D" uid="uid://meibjmmqti5e" path="res://assets/art/characters/soccer-player.png" id="1_lobas"]
[ext_resource type="Shader" uid="uid://bvrd25qc20cd4" path="res://shaders/replace_color.gdshader" id="2_myb68"]
[ext_resource type="Texture2D" uid="uid://cnuentm8n7hxv" path="res://assets/art/palettes/skin-colors-palette.png" id="3_jdbb3"]
[ext_resource type="Texture2D" uid="uid://c5ofqps0aoi5r" path="res://assets/art/props/1p.png" id="3_oya21"]
[ext_resource type="Texture2D" uid="uid://4couukdofllr" path="res://assets/art/characters/player-shadow.png" id="3_yiwlq"]
[ext_resource type="Texture2D" uid="uid://x02ysx25065h" path="res://assets/art/palettes/teams-color-palette.png" id="4_8id03"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ml4j5"]
resource_local_to_scene = true
shader = ExtResource("2_myb68")
shader_parameter/skin_palette = ExtResource("3_jdbb3")
shader_parameter/team_palette = ExtResource("4_8id03")
shader_parameter/skin_color = 0
shader_parameter/team_color = 4

[sub_resource type="Animation" id="Animation_yiwlq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_8id03"]
resource_name = "bicycle_kick"
length = 0.4
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [36, 37, 38, 39]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"on_annimation_complete"
}]
}

[sub_resource type="Animation" id="Animation_d51tt"]
resource_name = "celebrate"
length = 0.3
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 18, 24]
}

[sub_resource type="Animation" id="Animation_kbvwe"]
resource_name = "chest_control"
length = 0.1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [42]
}

[sub_resource type="Animation" id="Animation_c07nu"]
resource_name = "dive_down"
length = 0.1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [72]
}

[sub_resource type="Animation" id="Animation_tj1da"]
resource_name = "dive_up"
length = 0.1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [66]
}

[sub_resource type="Animation" id="Animation_v44mg"]
resource_name = "header"
length = 0.2
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [24, 25]
}

[sub_resource type="Animation" id="Animation_e4u3i"]
resource_name = "hurt"
length = 0.2
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [54, 55]
}

[sub_resource type="Animation" id="Animation_kt7ow"]
resource_name = "idle"
length = 0.6
loop_mode = 1
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_jdbb3"]
resource_name = "kick"
length = 0.15
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [49, 50, 51]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"on_annimation_complete"
}]
}

[sub_resource type="Animation" id="Animation_lqepj"]
resource_name = "moun"
length = 0.1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [18]
}

[sub_resource type="Animation" id="Animation_ml4j5"]
resource_name = "prep-kick"
length = 0.1
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [48]
}

[sub_resource type="Animation" id="Animation_myb68"]
resource_name = "recover"
length = 0.1
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [18]
}

[sub_resource type="Animation" id="Animation_lobas"]
resource_name = "run"
length = 0.6
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [6, 7, 8, 9, 10, 11]
}

[sub_resource type="Animation" id="Animation_oya21"]
resource_name = "tackle"
length = 0.1
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [30]
}

[sub_resource type="Animation" id="Animation_ibmvl"]
resource_name = "volley_kick"
length = 0.3
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [49, 50]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"on_annimation_complete"
}]
}

[sub_resource type="Animation" id="Animation_xr0ev"]
resource_name = "walk"
length = 0.9
loop_mode = 1
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45, 0.6, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [12, 13, 14, 15, 16, 17]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_oya21"]
_data = {
&"RESET": SubResource("Animation_yiwlq"),
&"bicycle_kick": SubResource("Animation_8id03"),
&"celebrate": SubResource("Animation_d51tt"),
&"chest_control": SubResource("Animation_kbvwe"),
&"dive_down": SubResource("Animation_c07nu"),
&"dive_up": SubResource("Animation_tj1da"),
&"header": SubResource("Animation_v44mg"),
&"hurt": SubResource("Animation_e4u3i"),
&"idle": SubResource("Animation_kt7ow"),
&"kick": SubResource("Animation_jdbb3"),
&"moun": SubResource("Animation_lqepj"),
&"prep-kick": SubResource("Animation_ml4j5"),
&"recover": SubResource("Animation_myb68"),
&"run": SubResource("Animation_lobas"),
&"tackle": SubResource("Animation_oya21"),
&"volley_kick": SubResource("Animation_ibmvl"),
&"walk": SubResource("Animation_xr0ev")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_lobas"]
radius = 4.0
height = 18.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_oya21"]
radius = 8.0
height = 35.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jdbb3"]
size = Vector2(7, 7)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_jdbb3"]
radius = 50.0
height = 100.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8id03"]
size = Vector2(7, 7)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_8id03"]
radius = 3.0
height = 18.0

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 9
script = ExtResource("1_kt7ow")
power = 150.0
speed = 80.0

[node name="PlayerSprite" type="Sprite2D" parent="."]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_ml4j5")
texture = ExtResource("1_lobas")
centered = false
offset = Vector2(-16, -32)
hframes = 6
vframes = 13

[node name="ControlSprite" type="Sprite2D" parent="PlayerSprite"]
unique_name_in_owner = true
position = Vector2(0, -35)
texture = ExtResource("3_oya21")
centered = false
offset = Vector2(-7, -6)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_oya21")
}
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -3)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_lobas")

[node name="TeammateDetctionArea" type="Area2D" parent="."]
unique_name_in_owner = true
visible = false
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="TeammateDetctionArea"]
visible = false
polygon = PackedVector2Array(0, -40, 280, -150, 330, -100, 330, 100, 280, 150, 0, 40)

[node name="ShadowSprite" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("3_yiwlq")
centered = false
offset = Vector2(-8, -15)

[node name="BallDectionArea" type="Area2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, 3)
collision_layer = 0
collision_mask = 4
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="BallDectionArea"]
position = Vector2(0, -8)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_oya21")

[node name="TackleDamageEmitterArea" type="Area2D" parent="."]
unique_name_in_owner = true
visible = false
collision_layer = 0
collision_mask = 2
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="TackleDamageEmitterArea"]
visible = false
position = Vector2(13, -3)
shape = SubResource("RectangleShape2D_jdbb3")

[node name="OpponentDetectionArea" type="Area2D" parent="."]
unique_name_in_owner = true
visible = false
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="OpponentDetectionArea"]
visible = false
position = Vector2(20, 0)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_jdbb3")

[node name="PermanentDamageEmitter" type="Area2D" parent="."]
unique_name_in_owner = true
visible = false
collision_layer = 0
collision_mask = 2
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="PermanentDamageEmitter"]
visible = false
position = Vector2(0, -6)
shape = SubResource("RectangleShape2D_8id03")

[node name="GoalierHands" type="AnimatableBody2D" parent="."]
visible = false
collision_layer = 32
collision_mask = 0
sync_to_physics = false

[node name="GoalierHands" type="CollisionShape2D" parent="GoalierHands"]
unique_name_in_owner = true
visible = false
position = Vector2(0, -14)
shape = SubResource("CapsuleShape2D_8id03")
debug_color = Color(0.867772, 0.231211, 0.66925, 0.42)
